--- a/app/doc.html
+++ b/app/doc.html
@@ -103,7 +103,7 @@
                 style="border-radius: 20px; width: 400px;" alt=""></p>
 
         <!-- Visualização da câmera -->
-        <video id="camera" width="100%" style="border: #a5abb6 2px solid; border-radius: 20px;" height="auto"
+        <video id="camera" class="img-fluid" width="width: 400px;" style="border: #a5abb6 2px solid; border-radius: 20px;" height="auto"
             autoplay></video>
 
         <!-- Botão para capturar imagem -->
@@ -142,7 +142,18 @@
 
         async function iniciarCamera() {
             try {
-                const stream = await navigator.mediaDevices.getUserMedia({ video: true });
+                const devices = await navigator.mediaDevices.enumerateDevices();
+                const cameras = devices.filter(device => device.kind === 'videoinput');
+
+                // Encontre a câmera traseira (se disponível)
+                const cameraTraseira = cameras.find(camera => camera.label.toLowerCase().includes('back'));
+
+                const stream = await navigator.mediaDevices.getUserMedia({
+                    video: {
+                        deviceId: cameraTraseira ? { exact: cameraTraseira.deviceId } : undefined,
+                    }
+                });
+
                 const camera = document.getElementById('camera');
                 camera.srcObject = stream;
             } catch (error) {
